change number to Number:

--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,6 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>number {{ n }} is {{ 'even' if n%2 == 0 else 'odd' }} </H1>
+        <H1>Number: {{ n }} is {{ 'even' if n%2 == 0 else 'odd' }} </H1>
     </BODY>
 </HTML>
